fix leaflet section control on mobile devices

--- a/src/c3nav/editor/static/editor/css/editor.css
+++ b/src/c3nav/editor/static/editor/css/editor.css
@@ -42,16 +42,29 @@ form button.invisiblesubmit {
     font-size: 14px;
     padding: 0 7px;
 }
+.leaflet-touch .leaflet-control-sections a, .leaflet-touch .leaflet-control-sections a:hover {
+    width: auto;
+    height:36px;
+    line-height:37px;
+    font-size: 14px;
+    padding: 0 12px;
+}
 .leaflet-control-sections a, .leaflet-control-sections a:hover {
     opacity:0;
     margin-top:-26px;
 }
-.leaflet-control-sections a.current, .leaflet-control-sections-expanded a, .leaflet-control-sections-expanded a:hover {
+.leaflet-touch .leaflet-control-sections a, .leaflet-touch .leaflet-control-sections a:hover {
+    margin-top:-36px;
+}
+.leaflet-control-sections a.current, .leaflet-control-sections-expanded a, .leaflet-control-sections-expanded a:hover,
+.leaflet-touch .leaflet-control-sections a.current, .leaflet-touch .leaflet-control-sections-expanded a,
+.leaflet-touch .leaflet-control-sections-expanded a:hover {
     opacity:1;
     margin-top:0;
 }
 .leaflet-control-sections:not(.leaflet-control-sections-expanded) a.current {
     border-radius:4px;
+    border-width:0;
 }
 .leaflet-control-sections a.current {
     font-weight:bold;
